Finished component PersonalData2

--- a/client/public/styles/personal_data.css
+++ b/client/public/styles/personal_data.css
@@ -129,3 +129,15 @@
     width: 156px;
     height: 170px; ;
 }
+.person_min {
+    margin-top: -1px;
+}
+.person__details{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.personal__meaning {
+    display: flex;
+    align-items: baseline;
+}
