--- a/client/public/styles/tkani.css
+++ b/client/public/styles/tkani.css
@@ -259,6 +259,62 @@
 	justify-content: center;
 	align-items: center;
 }
+.tkani-mob {
+	width: 100%;
+	box-sizing: border-box;
+	padding: 17px 16px 0 16px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+}
+.tkani-mob__catalog {
+	width: 100%;
+	margin-top: 20px;
+	display: flex;
+	align-items: center;
+	gap: 3px;
+	font-weight: 400;
+	font-size: 12px;
+	color: #545454;
+	padding-bottom: 3px;
+	border-bottom: 2px solid #545454;
+}
+.tkani-mob__catalog__click {
+	color: #f20d0d;
+}
+.tkani-mob__stic {
+	border: 1px solid #545454;
+	width: 100%;
+	margin-top: 3px;
+}
+.tkani-mob__filtrs {
+	margin-top: 6px;
+	width: 100%;
+	display: flex;
+	align-items: baseline;
+	justify-content: space-between;
+}
+.tkani-mob__filtrs__title {
+	font-weight: 500;
+	font-size: 16px;
+	color: #f20d0d;
+}
+.tkani-mob__filtrs__delete {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+	font-weight: 500;
+	font-size: 12px;
+	color: #545454;
+}
+
+@media (max-width: 340px) {
+	.tkani-mob__catalog {
+		font-size: 10px;
+	}
+}
+
 @media (max-width: 1120px) {
 	.tkani__main__sidebar__filter {
 		margin: 10px;
